correct line spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 html {
   box-sizing: border-box;
-  font-family: 'open sans', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   line-height: 1.5;
+  overflow: hidden;
 }
 
 *, *::before, *::after {
@@ -10,13 +11,14 @@ html {
 
 .banner {
   position: relative;
-  font-size: 4rem, 2rem;
+  font-size: 4rem;
 }
 
 .banner-content {
   padding: 0 1rem;
   position: absolute;
   bottom: 1rem;
+  left: 10%;
 }
 
 .banner-content h2 {
@@ -27,9 +29,14 @@ html {
 
 .banner-content p {
   font-size: 2rem;
+  font-style: italic;
+  font-family: "open Sans", cursive;
 }
 
 .img-flex {
+  overflow: hidden;
+  display: block;
+  width: 100%;
   max-width: 50em;
   max-height: 500px;
 }
